--- a/sass/paragraphs-widget.scss
+++ b/sass/paragraphs-widget.scss
@@ -361,6 +361,13 @@ $paragraph-preview-thumbnail-mobile-width: 125px;
   padding: 20px 20px 20px 0;
   color: $gray-medium;
 
+  // Remove additional spacing inside paragraph subforms.
+  tr.odd & .form-item,
+  tr.even & .form-item {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   // Different colors, for better contrast
   a, .link {
     color: $primary-color;
